--- a/index.html
+++ b/index.html
@@ -29,46 +29,46 @@
     <!--header starts here-->
     <header class="header">
       <div class="container header-container">
-        <nav class="main-nav">
-          <a class="logo link header-link" href="./index.html"
-            ><span class="logo-accent">Web</span>Studio</a
+        <nav class="nav">
+          <a class="logo link" href="./index.html"
+            ><span class="logo__accent">Web</span>Studio</a
           >
-          <ul class="list header-list">
-            <li class="logo-list-item">
+          <ul class="list nav__list">
+            <li class="nav__list-item">
               <a
-                class="nav-link link header-nav-link current"
+                class="nav__link link header-nav-link current"
                 href="./index.html"
                 >Студія</a
               >
             </li>
-            <li class="logo-list-item">
-              <a class="nav-link link header-nav-link" href="./portfolio.html"
+            <li class="nav__list-item">
+              <a class="nav__link link header-nav-link" href="./portfolio.html"
                 >Портфоліо</a
               >
             </li>
-            <li class="logo-list-item">
-              <a class="nav-link link header-nav-link" href="#">Контакти</a>
+            <li class="nav__list-item">
+              <a class="nav__link link header-nav-link" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="list header-group">
-          <li class="menu-link">
+        <ul class="list header__group">
+          <li class="header__group-link">
             <a
-              class="nav-link link contact-link header-contact-link"
+              class="nav__link link header-contact-link"
               href="mailto:info@devstudio.com"
             >
-              <svg class="icon-header" width="16px" height="12px">
+              <svg class="header_group-icon" width="16px" height="12px">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="menu-link">
+          <li class="header__group-link">
             <a
-              class="nav-link link contact-link header-contact-link"
+              class="nav__link link header-contact-link"
               href="tel:+380961111111"
             >
-              <svg class="icon-header" width="10px" height="16px">
+              <svg class="header_group-icon" width="10px" height="16px">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -535,14 +535,12 @@
                 >
               </li>
               <li class="list-item address-item">
-                <a
-                  class="nav-link link contact-link"
-                  href="mailto:info@devstudio.com"
+                <a class="nav-link link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="list-item address-item">
-                <a class="nav-link link contact-link" href="tel:+380961111111"
+                <a class="nav-link link" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
