--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="nav">
-          <a class="logo link" href="./index.html"
+          <a class="logo link header__link" href="./index.html"
             ><span class="logo__accent">Web</span>Studio</a
           >
           <ul class="list nav__list">
@@ -81,11 +81,11 @@
     <main>
       <!--section 1; Hero-->
       <section class="hero">
-        <div class="container hero-container">
-          <h1 class="hero-title title">
+        <div class="container hero__container">
+          <h1 class="hero__title title">
             Ефективні рішення для <br />вашого бізнесу
           </h1>
-          <button class="hero-btn btn" type="button" data-modal-open>
+          <button class="hero__btn btn" type="button" data-modal-open>
             Замовити послугу
           </button>
         </div>
@@ -94,49 +94,49 @@
       <section class="benefits section">
         <div class="container">
           <h2 class="hidden-elements">Наші переваги</h2>
-          <ul class="benefits-list list">
+          <ul class="benefits__list list">
             <li class="list-item">
-              <div class="benefits-icon-container">
+              <div class="benefits__icon-container">
                 <svg width="70px" height="70px">
                   <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
-              <h3 class="benefits-title title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <h3 class="benefits__title title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
             <li class="list-item">
-              <div class="benefits-icon-container">
+              <div class="benefits__icon-container">
                 <svg width="70px" height="70px">
                   <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
-              <h3 class="benefits-title title">ПУНКТУАЛЬНІСТЬ</h3>
+              <h3 class="benefits__title title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
             <li class="list-item">
-              <div class="benefits-icon-container">
+              <div class="benefits__icon-container">
                 <svg width="70px" height="70px">
                   <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
-              <h3 class="benefits-title title">ПЛАНУВАННЯ</h3>
+              <h3 class="benefits__title title">ПЛАНУВАННЯ</h3>
               <p class="text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="list-item">
-              <div class="benefits-icon-container">
+              <div class="benefits__icon-container">
                 <svg width="70px" height="70px">
                   <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
-              <h3 class="benefits-title title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <h3 class="benefits__title title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
@@ -149,9 +149,9 @@
       <section class="work section">
         <div class="container work-container">
           <h2 class="section-title title">Чим ми займаємося</h2>
-          <ul class="list work-list">
+          <ul class="list work__list">
             <li
-              class="list-item work-list-item"
+              class="list-item work__list-item"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -161,10 +161,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="work-item-wrapper">Десктопні додатки</h3>
+              <h3 class="work__list-item-wrapper">Десктопні додатки</h3>
             </li>
             <li
-              class="list-item work-list-item"
+              class="list-item work__list-item"
               data-aos="fade-left"
               data-aos-duration="1000"
               data-aos-delay="500"
@@ -175,10 +175,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="work-item-wrapper">Мобільні додатки</h3>
+              <h3 class="work__list-item-wrapper">Мобільні додатки</h3>
             </li>
             <li
-              class="list-item work-list-item"
+              class="list-item work__list-item"
               data-aos="fade-left"
               data-aos-duration="1000"
               data-aos-delay="1000"
@@ -189,7 +189,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="work-item-wrapper">Дизайнерські рішення</h3>
+              <h3 class="work__list-item-wrapper">Дизайнерські рішення</h3>
             </li>
           </ul>
         </div>
@@ -468,46 +468,46 @@
       <!-- section 5, Our clients -->
       <section class="clients section">
         <div class="container">
-          <h2 class="section-title title">Постійні клієнти</h2>
-          <ul class="clients-list list">
-            <li class="client-list-item">
-              <a class="clients-link link" href="">
-                <svg class="client-icon icon">
+          <h2 class="section-title">Постійні клієнти</h2>
+          <ul class="clients__list list">
+            <li class="clients__list-item">
+              <a class="clients__link link" href="">
+                <svg class="clients__icon icon">
                   <use href="./images/icons.svg#logo-one"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list-item">
-              <a class="clients-link link" href="">
-                <svg class="client-icon icon">
+            <li class="clients__list-item">
+              <a class="clients__link link" href="">
+                <svg class="clients__icon icon">
                   <use href="./images/icons.svg#logo-two"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list-item">
-              <a class="clients-link link" href="">
-                <svg class="client-icon icon">
+            <li class="clients__list-item">
+              <a class="clients__link link" href="">
+                <svg class="clients__icon icon">
                   <use href="./images/icons.svg#logo-three"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list-item">
-              <a class="clients-link link" href="">
-                <svg class="client-icon icon">
+            <li class="clients__list-item">
+              <a class="clients__link link" href="">
+                <svg class="clients__icon icon">
                   <use href="./images/icons.svg#logo-four"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list-item">
-              <a class="clients-link link" href="">
-                <svg class="client-icon icon">
+            <li class="clienst__list-item">
+              <a class="clients__link link" href="">
+                <svg class="clients__icon icon">
                   <use href="./images/icons.svg#logo-five"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list-item">
-              <a class="clients-link link" href="">
-                <svg class="client-icon icon">
+            <li class="clients__list-item">
+              <a class="clients__link link" href="">
+                <svg class="clients__icon icon">
                   <use href="./images/icons.svg#logo-six"></use>
                 </svg>
               </a>
@@ -520,80 +520,80 @@
     <footer class="footer">
       <div class="general-footer-container container">
         <div class="footer-container">
-          <a class="logo logo-footer link" href="./index.html"
-            ><span class="logo-accent">Web</span>Studio</a
+          <a class="logo footer__logo link" href="./index.html"
+            ><span class="logo__accent">Web</span>Studio</a
           >
           <address class="address">
-            <ul class="list footer-list">
-              <li class="list-item address-map address-item">
+            <ul class="address__list list">
+              <li class="address-map address__item">
                 <a
-                  class="nav-link link"
+                  class="nav__link link"
                   href="https://goo.gl/maps/6CXjgPpzPFPxWvc36"
                   target="_blank"
                   rel="noopener noreferrer"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="list-item address-item">
-                <a class="nav-link link" href="mailto:info@devstudio.com"
+              <li class="address__item">
+                <a class="nav__link link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="list-item address-item">
-                <a class="nav-link link" href="tel:+380961111111"
+              <li class="address__item">
+                <a class="nav__link link" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="social-links-footer">
-          <p class="social-footer-title">Приєднуйтесь</p>
-          <ul class="social-footer-list list">
-            <li class="social-footer-icon">
+        <div class="social-footer">
+          <p class="social-footer__title">Приєднуйтесь</p>
+          <ul class="social-footer__list list">
+            <li class="social-footer__item">
               <a
-                class="social-footer-link link"
+                class="social-footer__link link"
                 href="https://www.instagram.com"
                 target="_blank"
                 rel="noreferrer noopener"
               >
-                <svg class="footer-icon" width="20px" height="20px">
+                <svg class="social-footer__icon" width="20px" height="20px">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-footer-icon">
+            <li class="social-footer__item">
               <a
-                class="social-footer-link link"
+                class="social-footer__link link"
                 href="https://www.twitter.com"
                 target="_blank"
                 rel="noreferrer noopener"
               >
-                <svg class="footer-icon" width="20px" height="20px">
+                <svg class="social-footer__icon" width="20px" height="20px">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-footer-icon">
+            <li class="social-footer__item">
               <a
-                class="social-footer-link link"
+                class="social-footer__link link"
                 href="https://www.facebook.com"
                 target="_blank"
                 rel="noreferrer noopener"
               >
-                <svg class="footer-icon" width="20px" height="20px">
+                <svg class="social-footer__icon" width="20px" height="20px">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-footer-icon">
+            <li class="social-footer__item">
               <a
-                class="social-footer-link link"
+                class="social-footer__link link"
                 href="https://www.linkedin.com"
                 target="_blank"
                 rel="noreferrer noopener"
               >
-                <svg class="footer-icon" width="20px" height="20px">
+                <svg class="social-footer__icon" width="20px" height="20px">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
@@ -602,18 +602,18 @@
         </div>
         <div class="newsletter">
           <form action="#">
-            <p class="newsletter-text">Підпишіться на розсилку</p>
-            <label class="newsletter-label">
+            <p class="newsletter__text">Підпишіться на розсилку</p>
+            <label class="newsletter__label">
               <input
-                class="newsletter-input"
+                class="newsletter__input"
                 type="email"
                 name="user-email"
                 placeholder="E-mail"
               />
             </label>
-            <button class="newsletter-btn" type="submit">
+            <button class="newsletter__btn" type="submit">
               Підписатися
-              <svg class="newsletter-icon" width="24" height="24">
+              <svg class="newsletter__icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
