--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="nav">
-          <a class="logo link" href="./index.html"
+          <a class="logo link header__link" href="./index.html"
             ><span class="logo__accent">Web</span>Studio</a
           >
           <ul class="list nav__list">
@@ -317,82 +317,80 @@
     <footer class="footer">
       <div class="general-footer-container container">
         <div class="footer-container">
-          <a class="logo logo-footer link" href="./index.html"
-            ><span class="logo-accent">Web</span>Studio</a
+          <a class="logo footer__logo link" href="./index.html"
+            ><span class="logo__accent">Web</span>Studio</a
           >
           <address class="address">
-            <ul class="list footer-list">
-              <li class="list-item address-map address-item">
+            <ul class="address__list list">
+              <li class="address-map address__item">
                 <a
-                  class="nav-link link"
+                  class="nav__link link"
                   href="https://goo.gl/maps/6CXjgPpzPFPxWvc36"
                   target="_blank"
                   rel="noopener noreferrer"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="list-item address-item">
-                <a
-                  class="nav-link link contact-link"
-                  href="mailto:info@devstudio.com"
+              <li class="address__item">
+                <a class="nav__link link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="list-item address-item">
-                <a class="nav-link link contact-link" href="tel:+380961111111"
+              <li class="address__item">
+                <a class="nav__link link" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="social-links-footer">
-          <p class="social-footer-title">Приєднуйтесь</p>
-          <ul class="social-footer-list list">
-            <li class="social-footer-icon">
+        <div class="social-footer">
+          <p class="social-footer__title">Приєднуйтесь</p>
+          <ul class="social-footer__list list">
+            <li class="social-footer__item">
               <a
-                class="social-footer-link link"
+                class="social-footer__link link"
                 href="https://www.instagram.com"
                 target="_blank"
                 rel="noreferrer noopener"
               >
-                <svg class="footer-icon" width="20px" height="20px">
+                <svg class="social-footer__icon" width="20px" height="20px">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-footer-icon">
+            <li class="social-footer__item">
               <a
-                class="social-footer-link link"
+                class="social-footer__link link"
                 href="https://www.twitter.com"
                 target="_blank"
                 rel="noreferrer noopener"
               >
-                <svg class="footer-icon" width="20px" height="20px">
+                <svg class="social-footer__icon" width="20px" height="20px">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-footer-icon">
+            <li class="social-footer__item">
               <a
-                class="social-footer-link link"
+                class="social-footer__link link"
                 href="https://www.facebook.com"
                 target="_blank"
                 rel="noreferrer noopener"
               >
-                <svg class="footer-icon" width="20px" height="20px">
+                <svg class="social-footer__icon" width="20px" height="20px">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-footer-icon">
+            <li class="social-footer__item">
               <a
-                class="social-footer-link link"
+                class="social-footer__link link"
                 href="https://www.linkedin.com"
                 target="_blank"
                 rel="noreferrer noopener"
               >
-                <svg class="footer-icon" width="20px" height="20px">
+                <svg class="social-footer__icon" width="20px" height="20px">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
@@ -401,18 +399,18 @@
         </div>
         <div class="newsletter">
           <form action="#">
-            <p class="newsletter-text">Підпишіться на розсилку</p>
-            <label class="newsletter-label">
+            <p class="newsletter__text">Підпишіться на розсилку</p>
+            <label class="newsletter__label">
               <input
-                class="newsletter-input"
+                class="newsletter__input"
                 type="email"
                 name="user-email"
                 placeholder="E-mail"
               />
             </label>
-            <button class="newsletter-btn" type="submit">
+            <button class="newsletter__btn" type="submit">
               Підписатися
-              <svg class="newsletter-icon" width="24" height="24">
+              <svg class="newsletter__icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
