--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Custom styles -->
+    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>WebStudio</title>
   </head>
