Added some changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Custom styles -->
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>WebStudio</title>
   </head>
@@ -708,7 +708,7 @@
               ></span
             >
           </label>
-          <button class="register-form-btn hero-btn" type="submit">
+          <button class="register-form-btn hero__btn" type="submit">
             Відправити
           </button>
         </form>
